# Azimuth-FreeLook

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: ue-runtime-injection.md
native/: CMakeLists.txt
native/freelook_dll/: CMakeLists.txt  dllmain.cpp  engine_module.cpp  freelook_internal.hpp  freelook_main.cpp  log.cpp  pattern.cpp  pe_utils.cpp  ue_discovery.cpp
native/include/freelook/: engine_module.hpp  log.hpp  opentrack_udp.hpp  pattern.hpp  pe_utils.hpp  ue_discovery.hpp
native/injector/: CMakeLists.txt  main.cpp
tools/: opentrack_udp_echo.py
